adds large row and two column layout

--- a/index.html
+++ b/index.html
@@ -6,16 +6,27 @@
 </head>
 <body>
 <nav>
-    <ul class="navbar">
-        <li class="logo"></li>
+    <ul class="navbar py-4">
+        <li class="logo">logo</li>
         <ul>
         <ul class="nav-links">
-        <li class="nav-item">Home</li>
-        <li class="nav-item">Profile</li>
-        <li class="nav-item">About</li>
-        <li class="nav-item">Services</li>
+        <li class="nav-item px-5">Home</li>
+        <li class="nav-item px-5">Profile</li>
+        <li class="nav-item px-5">About</li>
+        <li class="nav-item px-5">Services</li>
     </ul>
 </nav>
+<div class="article">
+  <div class="column"><h1>Article</h1></div>
+  <div class="column-2">
+      <div class="upper-article">
+          <h1>upper article</h1>
+  </div>
+  <div class="lower-article">
+      <h1>Lower article</h1>
+  </div>
+</div>
+
 </body>
 
 
