adds main container

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <li class="nav-item px-5">Services</li>
     </ul>
 </nav>
-<div class="article">
+<div class="article py-5">
   <div class="column"><h1>Article</h1></div>
   <div class="column-2">
       <div class="upper-article">
@@ -26,8 +26,11 @@
       <h1>Lower article</h1>
   </div>
 </div>
+</div>
+
+<div class="row justify-content-center">
+    <div class="col"><h1>Article</h1></div>
+</div>
 
 </body>
-
-
 </html>
