--- a/index.html
+++ b/index.html
@@ -28,9 +28,15 @@
 </div>
 </div>
 
-<div class="row justify-content-center">
-    <div class="col"><h1>Article</h1></div>
+<div class="main justify-content-center">
+    <div class="col"><h1>article</h1></div>
 </div>
+<footer>
+  <ul class="footer">
+      <li>Logo</li>
+  </ul>
+</div>
+</footer>
 
 </body>
 </html>
