adds photos to assets folder

--- a/index.html
+++ b/index.html
@@ -34,7 +34,12 @@
 <footer>
   <ul class="footer">
       <li>Logo</li>
-  </ul>
+<ul class="footer-links">
+    <li class="footer-item">Contact</li>
+    <li class="footer-item">Social</li>
+    <li class="footer-item">Email</li>
+</ul>
+</ul>
 </div>
 </footer>
 
