adds image to article container

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </ul>
 </nav>
 <div class="article py-5">
-  <div class="column"><h1>Article</h1></div>
+  <div class="column"><img src="/assets/stephen-leonardi-jDcNKV__v3Y-unsplash.jpg"class="article-img"></div>
   <div class="column-2">
       <div class="upper-article">
           <h1>upper article</h1>
