adds header text and image inline

--- a/index.html
+++ b/index.html
@@ -20,7 +20,11 @@
   <div class="column"><img src="/assets/stephen-leonardi-jDcNKV__v3Y-unsplash.jpg"class="article-img"></div>
   <div class="column-2">
       <div class="upper-article">
-          <h1>upper article</h1>
+            <h1 style="text-align:center;">
+            <img src="/assets/User Avatar-1.png" height="100">Paul Orwell</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam minima, enim dolor similique, laborum eius nisi ex commodi at voluptatibus sit nam doloremque quod alias dolorem ad optio expedita adipisci.</p>
+
+        
   </div>
   <div class="lower-article">
       <h1>Lower article</h1>
@@ -28,7 +32,8 @@
 </div>
 </div>
 
-<div class="main justify-content-center">
+
+<div class="main my-5">
     <div class="col"><h1>article</h1></div>
 </div>
 <footer>
