contact and social button to user profile

--- a/index.html
+++ b/index.html
@@ -20,11 +20,12 @@
   <div class="column"><img src="/assets/stephen-leonardi-jDcNKV__v3Y-unsplash.jpg"class="article-img"></div>
   <div class="column-2">
       <div class="upper-article">
+          <div class="container py-4">    
             <h1 style="text-align:center;">
             <img src="/assets/User Avatar-1.png" height="100">Paul Orwell</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam minima, enim dolor similique, laborum eius nisi ex commodi at voluptatibus sit nam doloremque quod alias dolorem ad optio expedita adipisci.</p>
-
-        
+            <p><button class="btn btn-primary">Contact</button><button class="btn btn-primary">Social</button></p>
+            </div>
   </div>
   <div class="lower-article">
       <h1>Lower article</h1>
